[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/Tileset/Floor.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://src/Actor/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Game/Level.gd" type="Script" id=3]
[ext_resource path="res://src/Actor/Enemy/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Tree/Tree.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Font/bahnschrift.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://src/Testing/AlgorithmTest.gd" type="Script" id=8]
[ext_resource path="res://src/Testing/LinePath.gd" type="Script" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 7 )

[node name="Level" type="Spatial"]
script = ExtResource( 3 )

[node name="Gridmap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 2, 1, 2 )
data = {
"cells": PoolIntArray( 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 0, 1, 1, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 1, 0, 2, 1, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 1, 0, 3, 1, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 1, 10, 3, 1, 11, 3, 1, 12, 3, 1, 13, 3, 1, 14, 3, 1, 15, 3, 1, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 1, 0, 4, 1, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 1, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 16, 4, 0, 17, 4, 0, 18, 4, 0, 19, 4, 1, 0, 5, 1, 1, 5, 0, 2, 5, 0, 3, 5, 1, 4, 5, 1, 5, 5, 1, 6, 5, 1, 7, 5, 0, 8, 5, 0, 9, 5, 1, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 15, 5, 0, 16, 5, 0, 17, 5, 1, 18, 5, 1, 19, 5, 1, 0, 6, 1, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 1, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 6, 0, 17, 6, 0, 18, 6, 0, 19, 6, 1, 0, 7, 1, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 1, 6, 7, 1, 7, 7, 1, 8, 7, 1, 9, 7, 1, 10, 7, 1, 11, 7, 1, 12, 7, 1, 13, 7, 1, 14, 7, 1, 15, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 19, 7, 1, 0, 8, 1, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 1, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 0, 14, 8, 0, 15, 8, 0, 16, 8, 0, 17, 8, 0, 18, 8, 0, 19, 8, 1, 0, 9, 1, 1, 9, 0, 2, 9, 0, 3, 9, 0, 4, 9, 0, 5, 9, 1, 6, 9, 0, 7, 9, 0, 8, 9, 0, 9, 9, 0, 10, 9, 0, 11, 9, 0, 12, 9, 0, 13, 9, 0, 14, 9, 0, 15, 9, 0, 16, 9, 0, 17, 9, 0, 18, 9, 0, 19, 9, 1, 0, 10, 1, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 1, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 1, 13, 10, 1, 14, 10, 1, 15, 10, 1, 16, 10, 1, 17, 10, 0, 18, 10, 0, 19, 10, 1, 0, 11, 1, 1, 11, 1, 2, 11, 1, 3, 11, 0, 4, 11, 0, 5, 11, 1, 6, 11, 1, 7, 11, 0, 8, 11, 1, 9, 11, 0, 10, 11, 0, 11, 11, 0, 12, 11, 1, 13, 11, 0, 14, 11, 0, 15, 11, 0, 16, 11, 0, 17, 11, 0, 18, 11, 0, 19, 11, 1, 0, 12, 1, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 12, 0, 5, 12, 1, 6, 12, 0, 7, 12, 0, 8, 12, 1, 9, 12, 0, 10, 12, 0, 11, 12, 0, 12, 12, 1, 13, 12, 0, 14, 12, 0, 15, 12, 0, 16, 12, 0, 17, 12, 0, 18, 12, 0, 19, 12, 1, 0, 13, 1, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 1, 6, 13, 0, 7, 13, 0, 8, 13, 1, 9, 13, 1, 10, 13, 1, 11, 13, 1, 12, 13, 1, 13, 13, 1, 14, 13, 1, 15, 13, 1, 16, 13, 1, 17, 13, 0, 18, 13, 0, 19, 13, 1, 0, 14, 1, 1, 14, 0, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 1, 9, 14, 0, 10, 14, 0, 11, 14, 0, 12, 14, 0, 13, 14, 0, 14, 14, 0, 15, 14, 0, 16, 14, 0, 17, 14, 0, 18, 14, 0, 19, 14, 1, 0, 15, 1, 1, 15, 0, 2, 15, 0, 3, 15, 0, 4, 15, 0, 5, 15, 0, 6, 15, 0, 7, 15, 0, 8, 15, 1, 9, 15, 0, 10, 15, 0, 11, 15, 0, 12, 15, 0, 13, 15, 0, 14, 15, 0, 15, 15, 0, 16, 15, 0, 17, 15, 0, 18, 15, 0, 19, 15, 1, 0, 16, 1, 1, 16, 0, 2, 16, 0, 3, 16, 1, 4, 16, 1, 5, 16, 1, 6, 16, 0, 7, 16, 0, 8, 16, 0, 9, 16, 0, 10, 16, 0, 11, 16, 0, 12, 16, 0, 13, 16, 0, 14, 16, 0, 15, 16, 0, 16, 16, 1, 17, 16, 1, 18, 16, 1, 19, 16, 1, 0, 17, 1, 1, 17, 0, 2, 17, 0, 3, 17, 1, 4, 17, 0, 5, 17, 0, 6, 17, 0, 7, 17, 0, 8, 17, 0, 9, 17, 0, 10, 17, 0, 11, 17, 0, 12, 17, 0, 13, 17, 0, 14, 17, 0, 15, 17, 0, 16, 17, 0, 17, 17, 0, 18, 17, 0, 19, 17, 1, 0, 18, 1, 1, 18, 0, 2, 18, 0, 3, 18, 1, 4, 18, 0, 5, 18, 0, 6, 18, 0, 7, 18, 0, 8, 18, 0, 9, 18, 0, 10, 18, 1, 11, 18, 0, 12, 18, 0, 13, 18, 0, 14, 18, 0, 15, 18, 0, 16, 18, 0, 17, 18, 0, 18, 18, 0, 19, 18, 1, 0, 19, 1, 1, 19, 1, 2, 19, 1, 3, 19, 1, 4, 19, 1, 5, 19, 1, 6, 19, 1, 7, 19, 1, 8, 19, 1, 9, 19, 1, 10, 19, 1, 11, 19, 1, 12, 19, 1, 13, 19, 1, 14, 19, 1, 15, 19, 1, 16, 19, 1, 17, 19, 1, 18, 19, 1, 19, 19, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="Player" parent="Gridmap" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1.69, 3 )

[node name="Enemy" parent="Gridmap" instance=ExtResource( 4 )]
transform = Transform( -0.409706, 0, 0.687125, 0, 0.8, 0, -0.687125, 0, -0.409706, 29.62, 0.5, 32.748 )

[node name="GroupObject" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.48628 )

[node name="Tree" parent="GroupObject" instance=ExtResource( 6 )]
transform = Transform( -0.834829, 0, -0.55051, 0, 1, 0, 0.55051, 0, -0.834829, 20.8857, 0.477263, 30.1249 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.997894, -0.0255607, -0.0596146, 0.0648633, 0.393241, 0.917145, 0, -0.91908, 0.394071, 11.8857, 20.0329, 6.44066 )
light_energy = 0.2

[node name="LinePath" type="Spatial" parent="."]
script = ExtResource( 9 )

[node name="Line3D" type="ImmediateGeometry" parent="LinePath"]

[node name="GroupSphere" type="Spatial" parent="LinePath"]

[node name="AlgorithmTest" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlBackground" type="Panel" parent="AlgorithmTest"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -305.0
margin_top = -68.592
margin_right = -37.0
margin_bottom = 135.408
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AlgorithmTest/ControlBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -85.0
margin_right = 121.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerJPS" type="HBoxContainer" parent="AlgorithmTest/ControlBackground/VBoxContainer"]
margin_right = 241.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AlgorithmTest/ControlBackground/VBoxContainer/ContainerJPS"]
margin_top = 1.0
margin_right = 213.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Jump Point Search"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckJPS" type="CheckBox" parent="AlgorithmTest/ControlBackground/VBoxContainer/ContainerJPS"]
margin_left = 217.0
margin_right = 241.0
margin_bottom = 24.0

[node name="ContainerTheta" type="HBoxContainer" parent="AlgorithmTest/ControlBackground/VBoxContainer"]
margin_top = 28.0
margin_right = 241.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AlgorithmTest/ControlBackground/VBoxContainer/ContainerTheta"]
margin_top = 1.0
margin_right = 213.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Theta Star"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckTheta" type="CheckBox" parent="AlgorithmTest/ControlBackground/VBoxContainer/ContainerTheta"]
margin_left = 217.0
margin_right = 241.0
margin_bottom = 24.0

[node name="ContainerPlay" type="HBoxContainer" parent="AlgorithmTest/ControlBackground/VBoxContainer"]
margin_top = 56.0
margin_right = 241.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AlgorithmTest/ControlBackground/VBoxContainer/ContainerPlay"]
margin_top = 1.0
margin_right = 213.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Play NPC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckPlay" type="CheckBox" parent="AlgorithmTest/ControlBackground/VBoxContainer/ContainerPlay"]
margin_left = 217.0
margin_right = 241.0
margin_bottom = 24.0

[node name="ContainerBtn" type="HBoxContainer" parent="AlgorithmTest/ControlBackground/VBoxContainer"]
margin_top = 84.0
margin_right = 241.0
margin_bottom = 111.0
size_flags_vertical = 3

[node name="Start" type="Button" parent="AlgorithmTest/ControlBackground/VBoxContainer/ContainerBtn"]
margin_right = 118.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="Stop" type="Button" parent="AlgorithmTest/ControlBackground/VBoxContainer/ContainerBtn"]
margin_left = 122.0
margin_right = 241.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Stop"

[node name="ContainerClear" type="HBoxContainer" parent="AlgorithmTest/ControlBackground/VBoxContainer"]
margin_top = 115.0
margin_right = 241.0
margin_bottom = 143.0
size_flags_vertical = 3

[node name="Clear" type="Button" parent="AlgorithmTest/ControlBackground/VBoxContainer/ContainerClear"]
margin_right = 241.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Clear"

[node name="OptionCell" type="OptionButton" parent="AlgorithmTest/ControlBackground/VBoxContainer"]
margin_top = 147.0
margin_right = 241.0
margin_bottom = 175.0
size_flags_vertical = 3

[node name="HeuristicBackground" type="Panel" parent="AlgorithmTest"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -302.0
margin_top = 144.408
margin_right = -38.0
margin_bottom = 218.408
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerHeristic" type="VBoxContainer" parent="AlgorithmTest/HeuristicBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.0
margin_top = -26.0
margin_right = 116.0
margin_bottom = 26.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerManhattan" type="HBoxContainer" parent="AlgorithmTest/HeuristicBackground/ContainerHeristic"]
margin_right = 232.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="AlgorithmTest/HeuristicBackground/ContainerHeristic/ContainerManhattan"]
margin_top = 2.0
margin_right = 204.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Manhattan Distance"

[node name="ManhattanCheck" type="CheckBox" parent="AlgorithmTest/HeuristicBackground/ContainerHeristic/ContainerManhattan"]
margin_left = 208.0
margin_right = 232.0
margin_bottom = 24.0
pressed = true

[node name="ContainerEuclidean" type="HBoxContainer" parent="AlgorithmTest/HeuristicBackground/ContainerHeristic"]
margin_top = 28.0
margin_right = 232.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="AlgorithmTest/HeuristicBackground/ContainerHeristic/ContainerEuclidean"]
margin_top = 2.0
margin_right = 204.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Euclidean Distance"

[node name="EuclideanCheck" type="CheckBox" parent="AlgorithmTest/HeuristicBackground/ContainerHeristic/ContainerEuclidean"]
margin_left = 208.0
margin_right = 232.0
margin_bottom = 24.0

[node name="ResultBackground" type="Panel" parent="AlgorithmTest"]
margin_left = 28.0
margin_top = 31.0
margin_right = 282.0
margin_bottom = 314.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AlgorithmTest/ResultBackground"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -103.5
margin_top = 14.6832
margin_right = 103.5
margin_bottom = 110.683
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerPathS" type="HBoxContainer" parent="AlgorithmTest/ResultBackground/VBoxContainer"]
margin_right = 207.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerPathS"]
margin_right = 192.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Path Solution Count : "

[node name="ValueSolution" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerPathS"]
margin_left = 196.0
margin_right = 207.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ContainerOpenNode" type="HBoxContainer" parent="AlgorithmTest/ResultBackground/VBoxContainer"]
margin_top = 25.0
margin_right = 207.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerOpenNode"]
margin_right = 108.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Open Node :"

[node name="ValueSolution" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerOpenNode"]
margin_left = 112.0
margin_right = 123.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ContainerVisitedNode" type="HBoxContainer" parent="AlgorithmTest/ResultBackground/VBoxContainer"]
margin_top = 50.0
margin_right = 207.0
margin_bottom = 71.0

[node name="Label" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerVisitedNode"]
margin_right = 123.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Visited Node :"

[node name="ValueSolution" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerVisitedNode"]
margin_left = 127.0
margin_right = 138.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ContainerTime" type="HBoxContainer" parent="AlgorithmTest/ResultBackground/VBoxContainer"]
margin_top = 75.0
margin_right = 207.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerTime"]
margin_right = 85.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Runtime :"

[node name="ValueSolution" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerTime"]
margin_left = 89.0
margin_right = 100.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ContainerFPS" type="HBoxContainer" parent="AlgorithmTest/ResultBackground/VBoxContainer"]
margin_top = 100.0
margin_right = 207.0
margin_bottom = 121.0

[node name="Label" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerFPS"]
margin_right = 177.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Frame Per Second :"

[node name="ValueSolution" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerFPS"]
margin_left = 181.0
margin_right = 192.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ContainerMemory" type="HBoxContainer" parent="AlgorithmTest/ResultBackground/VBoxContainer"]
margin_top = 125.0
margin_right = 207.0
margin_bottom = 146.0

[node name="Label" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerMemory"]
margin_right = 145.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Memory Usage :"

[node name="ValueSolution" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerMemory"]
margin_left = 149.0
margin_right = 160.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ContainerCost" type="HBoxContainer" parent="AlgorithmTest/ResultBackground/VBoxContainer"]
margin_top = 150.0
margin_right = 207.0
margin_bottom = 171.0

[node name="Label" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerCost"]
margin_right = 102.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Cost Node :"

[node name="ValueSolution" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerCost"]
margin_left = 106.0
margin_right = 117.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="ContainerPath" type="HBoxContainer" parent="AlgorithmTest/ResultBackground/VBoxContainer"]
margin_top = 175.0
margin_right = 207.0
margin_bottom = 196.0

[node name="Label" type="Label" parent="AlgorithmTest/ResultBackground/VBoxContainer/ContainerPath"]
margin_right = 51.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 6 )
text = "Path :"

[node name="TotalPathS" type="RichTextLabel" parent="AlgorithmTest/ResultBackground"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -166.0
margin_top = -88.0
margin_right = -33.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportMap" type="ViewportContainer" parent="AlgorithmTest"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -306.0
margin_top = 14.0
margin_right = -106.0
margin_bottom = 214.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="AlgorithmTest/ViewportMap"]
size = Vector2( 200, 200 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="AlgorithmTest/ViewportMap/Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20, 15, 20 )
projection = 1
size = 40.0

[node name="ContainerPos" type="VBoxContainer" parent="AlgorithmTest"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -299.145
margin_top = -69.1841
margin_right = -157.145
margin_bottom = -29.1841
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerPosPlayer" type="HBoxContainer" parent="AlgorithmTest/ContainerPos"]
margin_right = 142.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosPlayerLabel" type="Label" parent="AlgorithmTest/ContainerPos/ContainerPosPlayer"]
margin_right = 122.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 7 )
text = "Player Position : "

[node name="ValuePosPlayer" type="Label" parent="AlgorithmTest/ContainerPos/ContainerPosPlayer"]
margin_left = 126.0
margin_right = 140.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 8 )
text = "( )"

[node name="ContainerPosEnemy" type="HBoxContainer" parent="AlgorithmTest/ContainerPos"]
margin_top = 21.0
margin_right = 142.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosEnemyLabel" type="Label" parent="AlgorithmTest/ContainerPos/ContainerPosEnemy"]
margin_right = 124.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 7 )
text = "Enemy Position : "

[node name="ValuePosEnemy" type="Label" parent="AlgorithmTest/ContainerPos/ContainerPosEnemy"]
margin_left = 128.0
margin_right = 142.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 8 )
text = "( )"

[connection signal="pressed" from="AlgorithmTest/ControlBackground/VBoxContainer/ContainerJPS/CheckJPS" to="AlgorithmTest" method="_on_CheckJPS_pressed"]
[connection signal="pressed" from="AlgorithmTest/ControlBackground/VBoxContainer/ContainerTheta/CheckTheta" to="AlgorithmTest" method="_on_CheckTheta_pressed"]
[connection signal="pressed" from="AlgorithmTest/ControlBackground/VBoxContainer/ContainerBtn/Start" to="AlgorithmTest" method="_on_Start_pressed"]
[connection signal="pressed" from="AlgorithmTest/ControlBackground/VBoxContainer/ContainerBtn/Stop" to="AlgorithmTest" method="_on_Stop_pressed"]
[connection signal="pressed" from="AlgorithmTest/ControlBackground/VBoxContainer/ContainerClear/Clear" to="AlgorithmTest" method="_on_Clear_pressed"]
[connection signal="item_selected" from="AlgorithmTest/ControlBackground/VBoxContainer/OptionCell" to="AlgorithmTest" method="_on_OptionCell_item_selected"]
[connection signal="pressed" from="AlgorithmTest/HeuristicBackground/ContainerHeristic/ContainerManhattan/ManhattanCheck" to="AlgorithmTest" method="_on_ManhattanCheck_pressed"]
[connection signal="pressed" from="AlgorithmTest/HeuristicBackground/ContainerHeristic/ContainerEuclidean/EuclideanCheck" to="AlgorithmTest" method="_on_EuclideanCheck_pressed"]
